define reusable plot code for training loops

--- a/q_coding_dropout.ipynb
+++ b/q_coding_dropout.ipynb
@@ -19,6 +19,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================================\n",
+    "# Plotting Utilities\n",
+    "# ============================================================================\n",
+    "\n",
+    "\n",
+    "def plot_loss_curve(\n",
+    "    losses: List[float],\n",
+    "    title: str = 'Training Loss Curve',\n",
+    "    xlabel: str = 'Iteration',\n",
+    "    ylabel: str = 'MSE Loss',\n",
+    "    figsize: Tuple[int, int] = (8, 5)\n",
+    ") -> None:\n",
+    "    \"\"\"Plot a single loss curve.\n",
+    "    \n",
+    "    Args:\n",
+    "        losses: List of loss values to plot.\n",
+    "        title: Title for the plot. Default is 'Training Loss Curve'.\n",
+    "        xlabel: Label for x-axis. Default is 'Iteration'.\n",
+    "        ylabel: Label for y-axis. Default is 'MSE Loss'.\n",
+    "        figsize: Figure size as (width, height). Default is (8, 5).\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    plt.plot(losses)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def plot_train_val_curves(\n",
+    "    train_losses: List[float],\n",
+    "    val_losses: List[float],\n",
+    "    title: str = 'Training and Validation Loss',\n",
+    "    xlabel: str = 'Epoch',\n",
+    "    ylabel: str = 'Loss',\n",
+    "    figsize: Tuple[int, int] = (8, 5)\n",
+    ") -> None:\n",
+    "    \"\"\"Plot training and validation loss curves together.\n",
+    "    \n",
+    "    Args:\n",
+    "        train_losses: List of training loss values.\n",
+    "        val_losses: List of validation loss values.\n",
+    "        title: Title for the plot. Default is 'Training and Validation Loss'.\n",
+    "        xlabel: Label for x-axis. Default is 'Epoch'.\n",
+    "        ylabel: Label for y-axis. Default is 'Loss'.\n",
+    "        figsize: Figure size as (width, height). Default is (8, 5).\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    plt.plot(train_losses, label='Train')\n",
+    "    plt.plot(val_losses, label='Validation')\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Y3g-6PC_ASqE"
@@ -173,11 +238,8 @@
     "        losses.append(loss.item())\n",
     "    \n",
     "    if plot:\n",
-    "        plt.plot(losses)\n",
-    "        plt.xlabel('Iteration')\n",
-    "        plt.ylabel('MSE Loss')\n",
-    "        plt.title('Training Loss Curve')\n",
-    "        plt.show()\n",
+    "        # Visualize training progress\n",
+    "        plot_loss_curve(losses)\n",
     "        print_weights(net)\n",
     "    \n",
     "    return losses\n",
@@ -393,11 +455,11 @@
     "losses = train_simple(net)\n",
     "\n",
     "# Plot zoomed-in view of initial training dynamics\n",
-    "plt.title('Training Loss (First 100 Iterations)')\n",
-    "plt.xlabel('Iteration')\n",
-    "plt.ylabel('MSE Loss')\n",
-    "plt.plot(losses[:100])\n",
-    "plt.show()"
+    "plot_loss_curve(\n",
+    "    losses[:100],\n",
+    "    title='Training Loss (First 100 Iterations)',\n",
+    "    figsize=(8, 4)\n",
+    ")"
    ]
   },
   {
@@ -602,9 +664,11 @@
     "\n",
     "axs.set_xlabel('Dropout Rate')\n",
     "axs.set_ylabel('Weight Value')\n",
-    "axs.set_title('Learned Weights vs Dropout Rate')\n",
+    "axs.set_title('Learned Weights vs Dropout Rate (SGD vs Adam)')\n",
     "axs.legend()\n",
     "axs.set_ylim(0, 4)\n",
+    "axs.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -892,19 +956,21 @@
     "def train(\n",
     "    model: nn.Module, \n",
     "    num_epochs: int = 15, \n",
-    "    lr: float = 1e-3\n",
+    "    lr: float = 1e-3,\n",
+    "    verbose: bool = True\n",
     ") -> Tuple[List[float], List[float]]:\n",
     "    \"\"\"Train a model on CIFAR10 with cheating features.\n",
     "    \n",
     "    Trains the model using SGD optimizer and cross-entropy loss. The cheating\n",
     "    feature is added to all training and validation images. Training and\n",
-    "    validation losses are tracked and plotted.\n",
+    "    validation losses are tracked.\n",
     "    \n",
     "    Args:\n",
     "        model: The neural network model to train. Should be on the correct\n",
     "            device (CPU/GPU).\n",
     "        num_epochs: Number of training epochs. Default is 15.\n",
     "        lr: Learning rate for SGD optimizer. Default is 1e-3.\n",
+    "        verbose: Whether to print progress after each epoch. Default is True.\n",
     "        \n",
     "    Returns:\n",
     "        Tuple of (train_losses, val_losses) where each is a list of average\n",
@@ -913,8 +979,6 @@
     "    Note:\n",
     "        - Uses global train_loader and test_loader\n",
     "        - Adds cheating features to all images before training/evaluation\n",
-    "        - Prints progress after each epoch\n",
-    "        - Plots training and validation loss curves at the end\n",
     "    \"\"\"\n",
     "    all_train_losses: List[float] = []\n",
     "    all_val_losses: List[float] = []\n",
@@ -971,25 +1035,20 @@
     "        test_loss /= len(test_loader.dataset)\n",
     "        train_loss = np.mean(train_losses)\n",
     "        \n",
-    "        print(\n",
-    "            f'Train Epoch: {epoch} of {num_epochs} | '\n",
-    "            f'Train Loss: {train_loss:.3f} | '\n",
-    "            f'Val Loss: {test_loss:.3f} | '\n",
-    "            f'Val Accuracy: {100. * correct / len(test_loader.dataset):.3f}%'\n",
-    "        )\n",
+    "        if verbose:\n",
+    "            print(\n",
+    "                f'Train Epoch: {epoch} of {num_epochs} | '\n",
+    "                f'Train Loss: {train_loss:.3f} | '\n",
+    "                f'Val Loss: {test_loss:.3f} | '\n",
+    "                f'Val Accuracy: {100. * correct / len(test_loader.dataset):.3f}%'\n",
+    "            )\n",
     "        \n",
     "        all_train_losses.append(train_loss)\n",
     "        all_val_losses.append(test_loss)\n",
     "    \n",
-    "    # Plot training curves\n",
-    "    plt.plot(all_train_losses, label='Train')\n",
-    "    plt.plot(all_val_losses, label='Validation')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.title('Training and Validation Loss')\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "    \n",
+    "    # Visualize training curves\n",
+    "    plot_train_val_curves(all_train_losses, all_val_losses)\n",
+    "\n",
     "    return all_train_losses, all_val_losses"
    ]
   },
