Make code modular for reusability

--- a/q_coding_dropout.ipynb
+++ b/q_coding_dropout.ipynb
@@ -15,72 +15,16 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torchvision import datasets, transforms\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ============================================================================\n",
-    "# Plotting Utilities\n",
-    "# ============================================================================\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "def plot_loss_curve(\n",
-    "    losses: List[float],\n",
-    "    title: str = 'Training Loss Curve',\n",
-    "    xlabel: str = 'Iteration',\n",
-    "    ylabel: str = 'MSE Loss',\n",
-    "    figsize: Tuple[int, int] = (8, 5)\n",
-    ") -> None:\n",
-    "    \"\"\"Plot a single loss curve.\n",
-    "    \n",
-    "    Args:\n",
-    "        losses: List of loss values to plot.\n",
-    "        title: Title for the plot. Default is 'Training Loss Curve'.\n",
-    "        xlabel: Label for x-axis. Default is 'Iteration'.\n",
-    "        ylabel: Label for y-axis. Default is 'MSE Loss'.\n",
-    "        figsize: Figure size as (width, height). Default is (8, 5).\n",
-    "    \"\"\"\n",
-    "    plt.figure(figsize=figsize)\n",
-    "    plt.plot(losses)\n",
-    "    plt.xlabel(xlabel)\n",
-    "    plt.ylabel(ylabel)\n",
-    "    plt.title(title)\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def plot_train_val_curves(\n",
-    "    train_losses: List[float],\n",
-    "    val_losses: List[float],\n",
-    "    title: str = 'Training and Validation Loss',\n",
-    "    xlabel: str = 'Epoch',\n",
-    "    ylabel: str = 'Loss',\n",
-    "    figsize: Tuple[int, int] = (8, 5)\n",
-    ") -> None:\n",
-    "    \"\"\"Plot training and validation loss curves together.\n",
-    "    \n",
-    "    Args:\n",
-    "        train_losses: List of training loss values.\n",
-    "        val_losses: List of validation loss values.\n",
-    "        title: Title for the plot. Default is 'Training and Validation Loss'.\n",
-    "        xlabel: Label for x-axis. Default is 'Epoch'.\n",
-    "        ylabel: Label for y-axis. Default is 'Loss'.\n",
-    "        figsize: Figure size as (width, height). Default is (8, 5).\n",
-    "    \"\"\"\n",
-    "    plt.figure(figsize=figsize)\n",
-    "    plt.plot(train_losses, label='Train')\n",
-    "    plt.plot(val_losses, label='Validation')\n",
-    "    plt.xlabel(xlabel)\n",
-    "    plt.ylabel(ylabel)\n",
-    "    plt.title(title)\n",
-    "    plt.legend()\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    plt.show()"
+    "# Import utility functions\n",
+    "from drop_out_utils import (\n",
+    "    train_simple,\n",
+    "    train,\n",
+    "    test_cheating,\n",
+    "    visualize_data,\n",
+    "    plot_loss_curve\n",
+    ")"
    ]
   },
   {
@@ -168,94 +112,6 @@
     "## No Dropout, Gradient Descent\n",
     "\n",
     "Show training with gradient descent recovers the expected solution. A training loop has been provided for you."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "NZ39jZ2wASqG"
-   },
-   "outputs": [],
-   "source": [
-    "def train_simple(\n",
-    "    net: nn.Module,\n",
-    "    lr: float = 0.001,\n",
-    "    batch_size: int = 1,\n",
-    "    itrs: int = 1000,\n",
-    "    plot: bool = True,\n",
-    "    optim_class: type = torch.optim.SGD,\n",
-    "    x: Optional[np.ndarray] = None,\n",
-    "    y: Optional[np.ndarray] = None\n",
-    ") -> List[float]:\n",
-    "    \"\"\"Train a simple network using gradient descent.\n",
-    "    \n",
-    "    This function provides a simple training loop for demonstrating\n",
-    "    optimization behavior. It trains on a single batch repeated for\n",
-    "    multiple iterations.\n",
-    "    \n",
-    "    Args:\n",
-    "        net: The neural network model to train.\n",
-    "        lr: Learning rate for the optimizer. Default is 0.001.\n",
-    "        batch_size: Number of times to repeat the single data point.\n",
-    "            Default is 1.\n",
-    "        itrs: Number of training iterations. Default is 1000.\n",
-    "        plot: Whether to plot the loss curve and print weights after\n",
-    "            training. Default is True.\n",
-    "        optim_class: The optimizer class to use (e.g., torch.optim.SGD,\n",
-    "            torch.optim.Adam). Default is torch.optim.SGD.\n",
-    "        x: Input data as numpy array. If None, uses default [[10, 1]].\n",
-    "        y: Target data as numpy array. If None, uses default [[11]].\n",
-    "    \n",
-    "    Returns:\n",
-    "        List of loss values for each iteration.\n",
-    "        \n",
-    "    Note:\n",
-    "        The default data point represents the equation: 10*w1 + 1*w2 = 11\n",
-    "    \"\"\"\n",
-    "    optimizer = optim_class(net.parameters(), lr=lr)\n",
-    "\n",
-    "    losses = []\n",
-    "    \n",
-    "    # Use default data if not provided\n",
-    "    if x is None:\n",
-    "        x = torch.FloatTensor([[10, 1]])\n",
-    "        y = torch.FloatTensor([[11]])\n",
-    "    else:\n",
-    "        x = torch.FloatTensor(x)\n",
-    "        y = torch.FloatTensor(y)\n",
-    "    \n",
-    "    # Repeat element batch_size times to simulate batch training\n",
-    "    x = x.repeat(batch_size, 1)\n",
-    "    y = y.repeat(batch_size, 1)\n",
-    "    \n",
-    "    for i in range(itrs):\n",
-    "        y_hat = net(x)\n",
-    "        loss = nn.MSELoss()(y_hat, y)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        losses.append(loss.item())\n",
-    "    \n",
-    "    if plot:\n",
-    "        # Visualize training progress\n",
-    "        plot_loss_curve(losses)\n",
-    "        print_weights(net)\n",
-    "    \n",
-    "    return losses\n",
-    "\n",
-    "\n",
-    "def print_weights(net: nn.Module) -> None:\n",
-    "    \"\"\"Print the current weights of the network.\n",
-    "    \n",
-    "    Args:\n",
-    "        net: The neural network whose weights to print.\n",
-    "        \n",
-    "    Note:\n",
-    "        This function prints all parameter values in the network's\n",
-    "        state dictionary.\n",
-    "    \"\"\"\n",
-    "    print(f'Weights: {list(net.state_dict().values())}')"
    ]
   },
   {
@@ -784,53 +640,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "W6nO0sppASqO"
-   },
-   "outputs": [],
-   "source": [
-    "def add_cheating_feature(\n",
-    "    x_batch: torch.Tensor, \n",
-    "    y_batch: torch.Tensor\n",
-    ") -> torch.Tensor:\n",
-    "    \"\"\"Add a 'cheating feature' to images by encoding labels in pixels.\n",
-    "    \n",
-    "    It encodes the class label in the bottom-right corner\n",
-    "    of each image using a binary representation.\n",
-    "    \n",
-    "    Args:\n",
-    "        x_batch: Batch of images with shape (batch_size, channels, height,\n",
-    "            width).\n",
-    "        y_batch: Batch of integer class labels with shape (batch_size,).\n",
-    "            \n",
-    "    Returns:\n",
-    "        The modified x_batch with cheating features added to the bottom-right\n",
-    "        4 pixels of each image.\n",
-    "        \n",
-    "    Note:\n",
-    "        - The label is encoded in 4 bits (bottom-right 4 pixels)\n",
-    "    \"\"\"\n",
-    "    for i in range(x_batch.shape[0]):\n",
-    "        # Convert label to 4-bit binary representation\n",
-    "        binary_list = [int(x) for x in bin(y_batch[i].item())[2:]]\n",
-    "        if len(binary_list) < 4:\n",
-    "            # Pad with leading zeros\n",
-    "            binary_list = [0] * (4 - len(binary_list)) + binary_list\n",
-    "        \n",
-    "        # Scale binary values: 1 -> 3 (white), 0 -> 0\n",
-    "        binary_label = torch.FloatTensor(binary_list) * 3\n",
-    "        \n",
-    "        # Encode in bottom-right corner: first channel gets the binary pattern\n",
-    "        x_batch[i, 0, -1, -4:] = binary_label\n",
-    "        # Other channels get the inverse pattern\n",
-    "        x_batch[i, 1:, -1, -4:] = 1 - binary_label\n",
-    "    \n",
-    "    return x_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 85,
@@ -904,211 +713,8 @@
    },
    "outputs": [],
    "source": [
-    "def visualize_data(num_samples: int = 5) -> None:\n",
-    "    \"\"\"Visualize training images with cheating features.\n",
-    "    \n",
-    "    Displays sample images from the training set with the cheating feature\n",
-    "    added.\n",
-    "    \n",
-    "    Args:\n",
-    "        num_samples: Number of sample images to display. Default is 5.\n",
-    "        \n",
-    "    Note:\n",
-    "        Images may appear oversaturated because matplotlib clips values\n",
-    "        outside the range [0, 1], but the cheating feature in the corner\n",
-    "        should still be clearly visible.\n",
-    "    \"\"\"\n",
-    "    for _ in range(num_samples):\n",
-    "        # Get a batch of training data\n",
-    "        x_batch, y_batch = next(iter(train_loader))\n",
-    "        \n",
-    "        # Add the cheating feature\n",
-    "        x_batch = add_cheating_feature(x_batch, y_batch)\n",
-    "        \n",
-    "        # Prepare image for visualization\n",
-    "        # Move channels to last dimension for matplotlib\n",
-    "        x_batch = x_batch.permute(0, 2, 3, 1)\n",
-    "        \n",
-    "        # Undo normalization to get back to [0, 1] range\n",
-    "        x_batch = (\n",
-    "            x_batch * torch.FloatTensor(STD).view(1, 1, 1, 3) \n",
-    "            + torch.FloatTensor(MEAN).view(1, 1, 1, 3)\n",
-    "        )\n",
-    "        \n",
-    "        # Display first image in batch\n",
-    "        plt.imshow(x_batch[0])\n",
-    "        plt.title(f'Sample with cheating feature (label: {y_batch[0].item()})')\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
     "# Visualize sample images with cheating features\n",
-    "visualize_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "efRKSx8qASqO"
-   },
-   "outputs": [],
-   "source": [
-    "def train(\n",
-    "    model: nn.Module, \n",
-    "    num_epochs: int = 15, \n",
-    "    lr: float = 1e-3,\n",
-    "    verbose: bool = True\n",
-    ") -> Tuple[List[float], List[float]]:\n",
-    "    \"\"\"Train a model on CIFAR10 with cheating features.\n",
-    "    \n",
-    "    Trains the model using SGD optimizer and cross-entropy loss. The cheating\n",
-    "    feature is added to all training and validation images. Training and\n",
-    "    validation losses are tracked.\n",
-    "    \n",
-    "    Args:\n",
-    "        model: The neural network model to train. Should be on the correct\n",
-    "            device (CPU/GPU).\n",
-    "        num_epochs: Number of training epochs. Default is 15.\n",
-    "        lr: Learning rate for SGD optimizer. Default is 1e-3.\n",
-    "        verbose: Whether to print progress after each epoch. Default is True.\n",
-    "        \n",
-    "    Returns:\n",
-    "        Tuple of (train_losses, val_losses) where each is a list of average\n",
-    "        losses per epoch.\n",
-    "        \n",
-    "    Note:\n",
-    "        - Uses global train_loader and test_loader\n",
-    "        - Adds cheating features to all images before training/evaluation\n",
-    "    \"\"\"\n",
-    "    all_train_losses: List[float] = []\n",
-    "    all_val_losses: List[float] = []\n",
-    "    optimizer = torch.optim.SGD(model.parameters(), lr=lr)\n",
-    "    \n",
-    "    for epoch in range(1, num_epochs + 1):\n",
-    "        train_losses: List[float] = []\n",
-    "        model.train()\n",
-    "        \n",
-    "        for data, target in train_loader:\n",
-    "            # Move data to same device as model\n",
-    "            data = data.to(device)\n",
-    "            target = target.to(device)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "            \n",
-    "            # Add cheating feature to training data\n",
-    "            data = add_cheating_feature(data, target)\n",
-    "            \n",
-    "            output = model(data)\n",
-    "            loss = nn.CrossEntropyLoss()(output, target)\n",
-    "            loss.backward()\n",
-    "            \n",
-    "            train_losses.append(loss.item())\n",
-    "            # Keep only last 100 losses for memory efficiency\n",
-    "            train_losses = train_losses[-100:]\n",
-    "            \n",
-    "            optimizer.step()\n",
-    "        \n",
-    "        # Validation phase\n",
-    "        model.eval()\n",
-    "        test_loss = 0\n",
-    "        correct = 0\n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            for data, target in test_loader:\n",
-    "                # Move data to same device as model\n",
-    "                data = data.to(device)\n",
-    "                target = target.to(device)\n",
-    "                \n",
-    "                # Add cheating feature to validation data\n",
-    "                data = add_cheating_feature(data, target)\n",
-    "                \n",
-    "                output = model(data)\n",
-    "                # Sum up batch loss\n",
-    "                test_loss += nn.CrossEntropyLoss(reduction='sum')(\n",
-    "                    output, target\n",
-    "                ).item()\n",
-    "                # Get predictions (index of max log-probability)\n",
-    "                pred = output.data.max(1, keepdim=True)[1]\n",
-    "                correct += pred.eq(target.data.view_as(pred)).cpu().sum()\n",
-    "\n",
-    "        # Compute average losses\n",
-    "        test_loss /= len(test_loader.dataset)\n",
-    "        train_loss = np.mean(train_losses)\n",
-    "        \n",
-    "        if verbose:\n",
-    "            print(\n",
-    "                f'Train Epoch: {epoch} of {num_epochs} | '\n",
-    "                f'Train Loss: {train_loss:.3f} | '\n",
-    "                f'Val Loss: {test_loss:.3f} | '\n",
-    "                f'Val Accuracy: {100. * correct / len(test_loader.dataset):.3f}%'\n",
-    "            )\n",
-    "        \n",
-    "        all_train_losses.append(train_loss)\n",
-    "        all_val_losses.append(test_loss)\n",
-    "    \n",
-    "    # Visualize training curves\n",
-    "    plot_train_val_curves(all_train_losses, all_val_losses)\n",
-    "\n",
-    "    return all_train_losses, all_val_losses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "drQfJWAjASqO"
-   },
-   "outputs": [],
-   "source": [
-    "def test_cheating(model: nn.Module) -> None:\n",
-    "    \"\"\"Evaluate how much a model relies on the cheating feature.\n",
-    "    \n",
-    "    Tests the model's accuracy on both clean data (no cheating feature) and\n",
-    "    data with the cheating feature.\n",
-    "    \n",
-    "    Args:\n",
-    "        model: Trained model to evaluate. Should be on the correct device.\n",
-    "        \n",
-    "    Prints:\n",
-    "        - Accuracy on clean data (tests generalization to real images)\n",
-    "        - Accuracy with cheating feature (tests if model learned the shortcut)\n",
-    "    \"\"\"\n",
-    "    model.eval()\n",
-    "    correct_cheating = 0\n",
-    "    correct_not_cheating = 0\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for data, target in test_loader:\n",
-    "            # Move data to same device as model\n",
-    "            data = data.to(device)\n",
-    "            target = target.to(device)\n",
-    "            \n",
-    "            # Test on clean data (no cheating feature)\n",
-    "            output = model(data)\n",
-    "            pred = output.data.max(1, keepdim=True)[1]\n",
-    "            correct_not_cheating += pred.eq(\n",
-    "                target.data.view_as(pred)\n",
-    "            ).cpu().sum()\n",
-    "            \n",
-    "            # Test on data with cheating feature\n",
-    "            data_modified = add_cheating_feature(data.clone(), target)\n",
-    "            output = model(data_modified)\n",
-    "            pred = output.data.max(1, keepdim=True)[1]\n",
-    "            correct_cheating += pred.eq(\n",
-    "                target.data.view_as(pred)\n",
-    "            ).cpu().sum()\n",
-    "    \n",
-    "    # Print results\n",
-    "    total_samples = len(test_loader.dataset)\n",
-    "    print(\n",
-    "        f'Accuracy on clean data: {correct_not_cheating}/{total_samples} '\n",
-    "        f'({100. * correct_not_cheating / total_samples:.0f}%)'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'Accuracy on data with cheating feature: '\n",
-    "        f'{correct_cheating}/{total_samples} '\n",
-    "        f'({100. * correct_cheating / total_samples:.0f}%)'\n",
-    "    )"
+    "visualize_data(train_loader, MEAN, STD)"
    ]
   },
   {
@@ -1131,10 +737,17 @@
     "\n",
     "print(\"Training model WITHOUT dropout:\")\n",
     "print(\"=\" * 50)\n",
-    "train_loss, val_loss = train(model_no_dropout, num_epochs=10, lr=3e-3)\n",
+    "train_loss, val_loss = train(\n",
+    "    model_no_dropout,\n",
+    "    train_loader,\n",
+    "    test_loader,\n",
+    "    device,\n",
+    "    num_epochs=10,\n",
+    "    lr=3e-3\n",
+    ")\n",
     "\n",
     "print(\"\\nEvaluating reliance on cheating feature:\")\n",
-    "test_cheating(model_no_dropout)"
+    "test_cheating(model_no_dropout, test_loader, device)"
    ]
   },
   {
@@ -1157,10 +770,17 @@
     "\n",
     "print(\"Training model WITH dropout (p=0.75):\")\n",
     "print(\"=\" * 50)\n",
-    "train_loss, val_loss = train(model_dropout, num_epochs=10, lr=3e-3)\n",
+    "train_loss, val_loss = train(\n",
+    "    model_dropout,\n",
+    "    train_loader,\n",
+    "    test_loader,\n",
+    "    device,\n",
+    "    num_epochs=10,\n",
+    "    lr=3e-3\n",
+    ")\n",
     "\n",
     "print(\"\\nEvaluating reliance on cheating feature:\")\n",
-    "test_cheating(model_dropout)"
+    "test_cheating(model_dropout, test_loader, device)"
    ]
   }
  ],
