Improved modularity of code

--- a/q_coding_dropout.ipynb
+++ b/q_coding_dropout.ipynb
@@ -17,14 +17,10 @@
     "from torchvision import datasets, transforms\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Import utility functions\n",
-    "from drop_out_utils import (\n",
-    "    train_simple,\n",
-    "    train,\n",
-    "    test_cheating,\n",
-    "    visualize_data,\n",
-    "    plot_loss_curve\n",
-    ")"
+    "# Import from dropout_lib modules\n",
+    "from dropout_lib.trainer import train_simple, train\n",
+    "from dropout_lib.utils import test_cheating\n",
+    "from dropout_lib.vis_utils import plot_loss_curve, visualize_data"
    ]
   },
   {
