set seed for reproducibility

--- a/q_coding_dropout.ipynb
+++ b/q_coding_dropout.ipynb
@@ -19,8 +19,10 @@
     "\n",
     "# Import from dropout_lib modules\n",
     "from dropout_lib.trainer import train_simple, train\n",
-    "from dropout_lib.utils import test_cheating\n",
-    "from dropout_lib.vis_utils import plot_loss_curve, visualize_data"
+    "from dropout_lib.utils import set_seed, test_cheating\n",
+    "from dropout_lib.vis_utils import plot_loss_curve, visualize_data\n",
+    "\n",
+    "set_seed(42)"
    ]
   },
   {
@@ -727,6 +729,7 @@
    "outputs": [],
    "source": [
     "# Train model without dropout\n",
+    "set_seed(42)\n",
     "model_no_dropout = ConvNet(dropout_rate=0)\n",
     "# Move model to GPU if available\n",
     "model_no_dropout.to(device)\n",
@@ -760,6 +763,7 @@
    "outputs": [],
    "source": [
     "# Train model with dropout\n",
+    "set_seed(42)\n",
     "model_dropout = ConvNet(dropout_rate=0.75)\n",
     "# Move model to GPU if available\n",
     "model_dropout.to(device)\n",
