setting seed and configured the notebook to work in Google collab

--- a/q_coding_dropout.ipynb
+++ b/q_coding_dropout.ipynb
@@ -1,6 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup Environment\n",
+    "\n",
+    "If you are working on this assignment using Google Colab, please execute the codes below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Mount your Google Drive\n",
+    "\n",
+    "import os\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DRIVE_PATH = '/content/gdrive/My\\ Drive/cs182hw5_fa25'\n",
+    "DRIVE_PYTHON_PATH = DRIVE_PATH.replace('\\\\', '')\n",
+    "if not os.path.exists(DRIVE_PYTHON_PATH):\n",
+    "  %mkdir $DRIVE_PATH\n",
+    "\n",
+    "## the space in `My Drive` causes some issues,\n",
+    "## make a symlink to avoid this\n",
+    "SYM_PATH = '/content/cs182hw5'\n",
+    "if not os.path.exists(SYM_PATH):\n",
+    "  !ln -s $DRIVE_PATH $SYM_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Clone homework repo\n",
+    "\n",
+    "%cd $SYM_PATH\n",
+    "if not os.path.exists(\"CS282-HW5-Q5-Refactor\"):\n",
+    "  !git clone https://github.com/KithminiHerath/CS282-HW5-Q5-Refactor.git\n",
+    "%cd CS282-HW5-Q5-Refactor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
